# FAVE

./: .flake8  .gitattributes  .gitignore  .pylintrc  CITATION.cff  CONTRIBUTORS.md  Dockerfile  NEWS  NEWS.md  README.md  README.rst  docker-build.sh  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-docs.yml  test-and-run.yml
FAVE-align/: FAAValign.py  INSTALL.md  README.md  praat.py
FAVE-align/examples/: code.scp  testref.mlf
FAVE-align/model/: dict
FAVE-align/model/backups dicts/: dict_11022011
FAVE-extract/: README.md  README.txt  cmu_phoneset.txt  config.txt  formant.sty  means.txt
align/: FAAValign.py  FAAValign2.py  aligner.py  cmudictionary.py  praat.py  transcriptprocessor.py
align/examples/: test.scp
align/model/: merge_dicts.py
align/model/backups dicts/: dict_05232011  dict_06222010  dict_08222011  dict_11092011
align/model/g-dropping Jiahong/: dict_NEW_MERGED
doc/: conf.py  index.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/doctrees/code/: aligner.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt
doc/_build/html/_static/: pygments.css
doc/_build/html/code/: aligner.html  cmudictionary.html
docs/: conf.py  index.md  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/code/: aligner.rst  cmudictionary.md  cmudictionary.rst  index.md  index.rst  praat.md  praat.rst
docs/code/align/: aligner.md  aligner.rst  index.md  index.rst  transcriptprocessor.md  transcriptprocessor.rst
docs/code/extract/: esps.md  esps.rst  index.md  index.rst  mahalanobis.md  mahalanobis.rst  plotnik.md  plotnik.rst  remeasure.md  remeasure.rst  vowel.md
docs/usage/: index.md  index.rst  installation.md  installation.rst  quickstart.md  quickstart.rst  whats-new.md  whats-new.rst
fave/: FAAValign.py  cmudictionary.py  extractFormants.py  parselmouth_bridge.py  praat.py
fave/align/: aligner.py  transcriptprocessor.py
fave/align/examples/: align.mlf
fave/align/model/: merge_dicts.py  monophones
fave/extract/: README.md  esps.py  mahalanobis.py  plotnik.py  remeasure.py  vowel.py
fave/extract/config/: config.txt  covs.txt
fave/praatScripts/: extractFormants.praat  get_duration.praat
tests/fave/: test_cmudictionary.py
tests/fave/align/: test.csv  test_readFile.py  test_transcriptprocessor.py
tests/fave/extract/: test_extractFormants.py
(+47 files in other folders)
