[tool.poetry]
name = "fave"
version = "2.0.2"
description = "Forced alignment and vowel extraction"
authors = ["FAVE contributors"]
license = "GPL-3.0-only"
readme = "README.rst"
homepage = "https://github.com/JoFrhwld/FAVE"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.22"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
sphinx = "^4"
jinja2 = "~3.0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
fave-extract = "fave.extractFormants:main"
fave-align = "fave.FAAValign:setup"
extractFormants = "fave.extractFormants:main"
FAAValign = "fave.FAAValign:setup"
