[tool.poetry]
name = "fave"
version = "2.0.3-dev"
description = "Forced alignment and vowel extraction"
authors = [
	"Ingrid Rosenfelder",
	"Josef Fruehwald <josef.fruehwald@uky.edu>",
	"Christian Brickhouse <brickhouse@stanford.edu>",
	"Keelan Evanini",
	"Scott Seyfarth",
	"Kyle Gorman",
	"Hilary Prichard",
	"Jiahong Yuan",
	"FAVE contributors"
]
license = "GPL-3.0-only"
readme = "README.rst"
homepage = "https://github.com/JoFrhwld/FAVE"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.22"
tqdm = "^4.64.0"
praat-parselmouth = "^0.4.1"
deprecated = "^1.2.13"

[tool.poetry.dev-dependencies]
sphinx = "^4"
sphinx_pyproject = "0.1"
jinja2 = "~3.0"
pylint = "^2.5.2"
ipykernel = "^6.15.1"
flake8 = "^5"
pytest = "^7"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
fave-extract = "fave.extractFormants:main"
fave-align = "fave.FAAValign:setup"
